escrevi no conteúdo

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Estudar bastante</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto 001</p>
+            <h2>Estudar é bom</h2>
+            <p>estudoestudoestudo</p>
         </article>
         <article>
             <h2>Artigo 002</h2>
