outro update lorem

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <p>estudoestudoestudo</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto 002</p>
+            <h2>AMENO</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex consequatur reiciendis reprehenderit atque quae esse facilis recusandae? At sint rem hic consectetur voluptate beatae tenetur minima voluptates voluptas est? Ex.</p>
         </article>
     </main>
 </body>
