--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Título do site TESTE!</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
+
 <body>
     <main>
         <header>
