--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <body>
     <main>
         <header>
-            <h1>Estudar bastante</h1>
+            <h1>Cursos</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em vídeo">
         </header>
         <article>
-            <h2>Estudar é bom</h2>
-            <p>estudoestudoestudo</p>
+            <h2>Curso de HTML5 e CSS com o Professor Gustavo Guanabara!</h2>
+            <p>Um excelente curso ministrado pelo melhor Professor de TI, Gustavo Guanabara!</p>
         </article>
         <article>
-            <h2>AMENO</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex consequatur reiciendis reprehenderit atque quae esse facilis recusandae? At sint rem hic consectetur voluptate beatae tenetur minima voluptates voluptas est? Ex.</p>
+            <h2>Curso de Javascript</h2>
+            <p>Curso de uma das linguagens de programação mais usadas mundo afora, grátis e com certificado!</p>
         </article>
     </main>
 </body>
