--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
         </header>
         <article>
             <h2>Curso de HTML5 e CSS com o Professor Gustavo Guanabara!</h2>
-            <p>Um excelente curso ministrado pelo melhor Professor de TI, Gustavo Guanabara!</p>
+            <img src="imagens/curso-html-css.png" alt="Curso HTML">
+            <p> A <abbr title="HyperText Markup Language">HTML</abbr> é uma boa linguagem para se aprender, nesse curso ministrado pelo professor Gustavo Guanabara!
+            E com a linguagem <abbr title="HyperText Markup Language">CSS</abbr></p> vamos aprender a criar as configurações visuais do site!
         </article>
         <article>
             <h2>Curso de Javascript</h2>
+            <img src="imagens/curso-javascript.png" alt="">
             <p>Curso de uma das linguagens de programação mais usadas mundo afora, grátis e com certificado!</p>
         </article>
     </main>
