--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         </header>
         <article>
             <h2>Curso de HTML5 e CSS com o Professor Gustavo Guanabara!</h2>
-            <img src="imagens/curso-html-css.png" alt="Curso HTML">
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p> A <abbr title="HyperText Markup Language">HTML</abbr> é uma boa linguagem para se aprender, nesse curso ministrado pelo professor Gustavo Guanabara!
             E com a linguagem <abbr title="HyperText Markup Language">CSS</abbr></p> vamos aprender a criar as configurações visuais do site!
         </article>
         <article>
             <h2>Curso de Javascript</h2>
-            <img src="imagens/curso-javascript.png" alt="">
+            <img class="lado" src="imagens/curso-javascript.png" alt="Cuso Javascript">
             <p>Curso de uma das linguagens de programação mais usadas mundo afora, grátis e com certificado!</p>
         </article>
     </main>
-</body>
+</body>      
 </html>
