--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
             <h2>Curso de HTML5 e CSS com o Professor Gustavo Guanabara!</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p> A <abbr title="HyperText Markup Language">HTML</abbr> é uma boa linguagem para se aprender, nesse curso ministrado pelo professor Gustavo Guanabara!
-            E com a linguagem <abbr title="HyperText Markup Language">CSS</abbr></p> vamos aprender a criar as configurações visuais do site!
+            E com a linguagem <abbr title="HyperText Markup Language">CSS</abbr> vamos aprender a criar as configurações visuais do site!</p>
+            <p><a href="curso-html.html">Acesse o Curso de HTML5</a></p> 
         </article>
         <article>
             <h2>Curso de Javascript</h2>
             <img class="lado" src="imagens/curso-javascript.png" alt="Cuso Javascript">
             <p>Curso de uma das linguagens de programação mais usadas mundo afora, grátis e com certificado!</p>
+            <p><a href="curso-js.html">Acesse o Curso de Javascript</a></p>
         </article>
     </main>
 </body>      
